crates/clx-hook/tests/snapshots/router_smoke__parse_pre_compact.snap
---
source: crates/clx-hook/tests/router_smoke.rs
expression: value
---
Object {
    "cwd": String("/tmp/test-project"),
    "hook_event_name": String("PreCompact"),
    "session_id": String("00000000-0000-0000-0000-000000000007"),
    "transcript_path": String("/tmp/test-project/.claude/transcripts/00000000-0000-0000-0000-000000000007.jsonl"),
    "trigger": String("auto"),
}
