crates/clx-hook/tests/snapshots/router_smoke__parse_pre_tool_use.snap
---
source: crates/clx-hook/tests/router_smoke.rs
expression: value
---
Object {
    "cwd": String("/tmp/test-project"),
    "hook_event_name": String("PreToolUse"),
    "session_id": String("00000000-0000-0000-0000-000000000001"),
    "tool_input": Object {
        "file_path": String("/tmp/test-project/README.md"),
    },
    "tool_name": String("Read"),
    "tool_use_id": String("toolu_00000000000000000000000001"),
    "transcript_path": String("/tmp/test-project/.claude/transcripts/00000000-0000-0000-0000-000000000001.jsonl"),
}
