crates/clx-hook/tests/snapshots/router_smoke__parse_session_start.snap
---
source: crates/clx-hook/tests/router_smoke.rs
expression: value
---
Object {
    "cwd": String("/tmp/test-project"),
    "hook_event_name": String("SessionStart"),
    "session_id": String("00000000-0000-0000-0000-000000000006"),
    "source": String("startup"),
    "transcript_path": String("/tmp/test-project/.claude/transcripts/00000000-0000-0000-0000-000000000006.jsonl"),
}
