crates/clx-hook/tests/snapshots/router_smoke__parse_subagent_start.snap
---
source: crates/clx-hook/tests/router_smoke.rs
expression: value
---
Object {
    "cwd": String("/tmp/test-project"),
    "hook_event_name": String("SubagentStart"),
    "session_id": String("00000000-0000-0000-0000-000000000004"),
    "transcript_path": String("/tmp/test-project/.claude/transcripts/00000000-0000-0000-0000-000000000004.jsonl"),
}
