crates/clx-hook/tests/snapshots/router_smoke__parse_user_prompt_submit.snap
---
source: crates/clx-hook/tests/router_smoke.rs
expression: value
---
Object {
    "cwd": String("/tmp/test-project"),
    "hook_event_name": String("UserPromptSubmit"),
    "prompt": String("How do I run the tests for this project?"),
    "session_id": String("00000000-0000-0000-0000-000000000003"),
    "transcript_path": String("/tmp/test-project/.claude/transcripts/00000000-0000-0000-0000-000000000003.jsonl"),
}
